# learning_AI_Agents

./: .gitignore  README.md  note.md  note.txt
00_openai_agents/00_python_syntax/: 01_basic_dataclasses.py  02_nested_dataclasses.py
00_openai_agents/pratice/: Pra_pydantic.py  README.md  clone.py  generic.py  index.py  input_guardrail.py  main.py  pyproject.toml
00_openai_agents/prompt_engineering/: Readme.md  clas.js
01_ai_agents_first/01_uv/02_project/02_project/: pyproject.toml
01_ai_agents_first/02_openrouter/: Readme.md
01_ai_agents_first/03_litellm/myproject/: README.md  chat_history.json  main.py  pyproject.toml
01_ai_agents_first/06_chatbots/: main.py  pyproject.toml
01_ai_agents_first/07_model_settings/: main.py  pyproject.toml
01_ai_agents_first/08_local_context/: main.py
01_ai_agents_first/09_dynamic_instructions/: main.py  practice.py
01_ai_agents_first/10_streaming/: README.md  main.py  pyproject.toml
01_ai_agents_first/11_agent_clone/: README.md  main.py  pyproject.toml
01_ai_agents_first/12_basic_tracing/: main.py  pyproject.toml  tracing.py
01_ai_agents_first/13_agents_as_tool/: README.md  main.py  pyproject.toml
01_ai_agents_first/14_basic_handsoff/: README.md  hello.py  main.py  pyproject.toml
01_ai_agents_first/15_advanced_tools/: main.py  part1.py  part2.py  part3.py  part4.py  pyproject.toml  tool_dynamic_permissions.py
01_ai_agents_first/16_advanced_handoffs/: 01_handoff_obj.py  02_handsoff_callbacks.py  03_handoff_dynamic_permission.py  04_is_enabled.py  main.py  pyproject.toml
GIAIC-Quater-04/classes/: notes.txt
(+42 files in other folders)
