[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali_jan", email = "hassanfarid667@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.72.2",
]

[project.scripts]
myproject = "myproject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
