[project]
name = "02-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali_jan", email = "hassanfarid667@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
02-project = "02_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
